tdf#91014 - dispose SfxControllerItem sub-class earlier.

This avoids getting StateChange calls on disposed widgets.

Change-Id: I33968f1afc09df47eda5ad5e0f0ae3a5cc408a63